# FastAPIExample

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  coverage.xml  docker-compose.yml  install.ps1  pyproject.toml  requirements.txt  requirements_test.txt  run.bat  setup.cfg
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build-and-release-to-pypi.yml  check-rst-documentation.yml  ci.yml  pre-commit.yml  pypi-pipeline.yaml
.packageit/: packageit.ini  release.toml
docs/source/: api.rst  conf.py  conventions.rst  index.rst
requirements/: requirements.txt  requirements_dev.txt
src/: crud.py  dbdef.py  main.py  models.py  schemas.py
src/fastapiexample/: __init__.py  fastapiexample.py
tests/: conftest.py  test_fastapiexample.py  test_main.py  test_main_orm.py
