[project]
name = 'FastAPIExample'
version = '0.0.7'
authors = [
    { name = 'Hendrik du Toit', email = 'hendrik@brightedge.co.za' },
]
description = 'Exploring FastAPI'
license = {file = 'LICENSE'}
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Topic :: Communications',
    'Topic :: Software Development',
    'Topic :: Internet :: WWW/HTTP',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11'
]
readme = {file = 'README.rst', content-type = 'text/x-rst'}
requires-python = '>=3.10, <3.12'
dependencies = [
    'fastapi',
    'mysql-connector-python',
    'sqlalchemy',
#    'sqlalchemy-utils',
  ]

[project.optional-dependencies]
dev = [
    'build',
    'git-it',
    'httpx',
    'Pygments',
    #codecov'
    #docutils'
    'pytest',
    'pytest-cov',
    'rstcheck',
    'uvicorn'
]

[project.urls]
Changelog = 'https://github.com/hendrikdutoit/FastAPIExample/blob/enhancement/master/CHANGES.md'
Homepage = 'https://github.com/hendrikdutoit/FastAPIExample'

[build-system]
requires = [
    "build",
    "setuptools >= 68",
    "wheel",
    "setuptools-git >= 1.1",
]
build-backend = 'setuptools.build_meta'

[tool.black]
skip-string-normalization = true
line-length = 120
target-version = ["py311"]

[tool.codespell]
count = ""
quiet-level = 2
skip = 'documentation/Archive/*'

[tool.coverage.run]
source = ['src']

[tool.pytest.ini_options]
addopts = ['--import-mode=importlib', '-vv', '--ignore-glob=*\\Archive']
#addopts = ['--import-mode=importlib', "-v", "--cov=./", "--ignore-glob=*\\Archive", "--cov-report=html"]
pythonpath = ['src', 'tests' ]
markers = [
    "select: Run a selection of tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
#python_functions = 'demo_setup'
testpaths = 'tests'

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
